<resources>
    <string name="app_name">Ejercicio_controles_grupo7</string>
    <string name="titulo_add_contact">Formulario de contacto</string>
    <string name="descripcion_add_contact">Este es un formulario destinado al registro de personas, sus datos personales e intereses</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="direccion">Direccion</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="continuar">Continuar</string>
    <string name="volver">Volver</string>
    <string name="descripcion_add_contact2">A continuiación, por favor se pide comlpetar más datos personales.</string>

    <string name="estudiosAlcanzados">Nivel de estudios alcanzados</string>
    <string name="rbPrimarioIncompleto">Primario Incompleto</string>
    <string name="rbPrimarioCompleto">Primario Completo</string>
    <string name="rbSecunIncompleto">Secundario Incompleto</string>
    <string name="rbSecunCompleto">Secundario Completo</string>
    <string name="rbOtros">Otros</string>
    <string name="tvIntereses">Intereses</string>
    <string name="cbDeporte">Deporte</string>
    <string name="cbMusica">Musica</string>
    <string name="cbArte">Arte</string>
    <string name="cbTecnologia">Tecnologia</string>
    <string name="tvInfo">Desea recibir información?</string>
    <string name="swSi">Si</string>

    <string name="btnGuardar">Guardar</string>
    <string name="tv_TipoEmailContacto">TipoEmail</string>
    <string name="tv_datoDireccion">Direccion</string>
    <string name="tv_datoEmail">Email</string>
    <string name="tv_datoEstAlcanzado">Estudios alcanzados</string>
    <string name="tv_datoFechaNac" > Fecha Nacimiento</string>
    <string name="tv_DatoInfo">Info</string>
    <string name="tv_datointereses">intereses</string>
    <string name="tv_DatoNombre">Nombre</string>
    <string name="tv_DatoTelefono">Telefono</string>
    <string name="tv_tipoTelDato">TipoTel</string>
    <string name="tv_infoContacto">Recibir información</string>
</resources>